--- a/adjutant_ui/content/signup/templates/auth/_login_page.html
+++ b/adjutant_ui/content/signup/templates/auth/_login_page.html
@@ -3,5 +3,5 @@
 
 {% block login_footer %}
   {{ block.super }}
-  <p>Don't have an account? <a href="{% url 'horizon:signup:signup:index' %}">Sign up</a>.</p>
+  <p>Don't have a project? <a href="{% url 'horizon:signup:signup:index' %}">Sign up</a>.</p>
 {% endblock %}
